--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,39 @@
-anyio==3.6.2
-APScheduler==3.6.3
-cachetools==4.2.2
-certifi==2022.12.7
+anyio==3.7.0
+APScheduler==3.10.1
+astroid==2.15.5
+cachetools==5.3.1
+certifi==2023.5.7
 charset-normalizer==3.1.0
+dill==0.3.6
+Events==0.4
 exceptiongroup==1.1.1
 h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
+httpcore==0.17.2
+httpx==0.24.1
 idna==3.4
 iniconfig==2.0.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
 packaging==23.1
+platformdirs==3.5.1
 pluggy==1.0.0
-pyTelegramBotAPI==4.10.0
+pylint==2.17.4
+pyTelegramBotAPI==4.12.0
 pytest==7.3.1
 pytest-mock==3.10.0
-python-telegram-bot==20.2
+python-telegram-bot==20.3
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
-requests==2.28.2
-rfc3986==1.5.0
+requests==2.31.0
+rfc3986==2.0.0
 six==1.16.0
 sniffio==1.3.0
 telebot==0.0.5
 tomli==2.0.1
-tornado==6.2
+tomlkit==0.11.8
+tornado==6.3.2
 tzdata==2023.3
-tzlocal==4.3
-urllib3==1.26.15
+tzlocal==5.0.1
+urllib3==2.0.2
+wrapt==1.15.0
