--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 anyio==3.7.0
 APScheduler==3.10.1
 astroid==2.15.5
+async-timeout==4.0.2
+attrs==23.1.0
 cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
 dill==0.3.6
 Events==0.4
 exceptiongroup==1.1.1
+frozenlist==1.3.3
 h11==0.14.0
 httpcore==0.17.2
 httpx==0.24.1
@@ -15,6 +20,7 @@ iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
+multidict==6.0.4
 packaging==23.1
 platformdirs==3.5.1
 pluggy==1.0.0
@@ -37,3 +43,4 @@ tzdata==2023.3
 tzlocal==5.0.1
 urllib3==2.0.2
 wrapt==1.15.0
+yarl==1.9.2
